#pragma once

enum Direction {
    VERTICAL = 0,
    HORIZONTAL = 1,
};