#pragma once
#include "Screen.h"


class MainScreen : public Screen {
public:
    MainScreen();
    void print() override;
};
