#pragma once

enum Key
{
    IGNORED = 0,
    UP,
    DOWN,
    LEFT,
    RIGHT,
    ENTER,
};
